--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ authors = [""]
 python = "^3.9"
 PyYAML = "^6.0"
 requests = "^2.27.1"
+pandas = "^1.4.2"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
