--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ PyYAML = "^6.0"
 requests = "^2.27.1"
 pandas = "^1.4.2"
 numpy = "^1.22.3"
+websockets = "^10.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
