--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pre-commit = "*"
 flake8 = "*"
 pytest = "^6.2.2"
 black = {version = "^22.3.0", allow-prereleases = true}
+mypy = "^0.950"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
